# ferrosync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Dockerfile.rsync-ssh  design-philosophy.md  docker-compose.test.yml  testing.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  codeql.yaml  release.yaml  release.yml
crates/ferrosync-cli/: Cargo.toml
crates/ferrosync-cli/src/: main.rs
crates/ferrosync-codec/: Cargo.toml
crates/ferrosync-codec/src/: acl.rs  exchange.rs  iconv.rs  incremental.rs  lib.rs  sort.rs  xattr.rs
crates/ferrosync-codec/src/codec/: diagnostic.rs  fields.rs  flags.rs  hlink.rs  mod.rs  options.rs  state.rs  tests.rs  visitor.rs
crates/ferrosync-core/: Cargo.toml
crates/ferrosync-core/benches/: checksums.rs  compression.rs  delta.rs
crates/ferrosync-core/src/: acl.rs  chmod.rs  error.rs  lib.rs  options.rs  xattr.rs
crates/ferrosync-core/src/delta/: checksum.rs  chunker.rs  matcher.rs  mod.rs  ops.rs  sum.rs  token.rs
crates/ferrosync-core/src/engine/: checkpoint.rs  concurrent.rs  delete.rs  file_decision.rs  generator.rs  mod.rs  pipeline.rs  progress.rs  receiver.rs  receiver_engine.rs  sender.rs  session.rs  streaming_flist.rs  transfer.rs  wire_transfer.rs
crates/ferrosync-core/src/filelist/: codec.rs  entry.rs  exchange.rs  incremental.rs  mod.rs  scanner.rs  sort.rs  walk.rs  xmit.rs
crates/ferrosync-core/src/filelist/codec/: diagnostic.rs  fields.rs  flags.rs  hlink.rs  mod.rs  options.rs  state.rs  tests.rs
crates/ferrosync-core/src/filter/: pattern.rs  rule.rs
crates/ferrosync-core/src/fs/: fake_super.rs  metadata.rs  mod.rs  unix.rs  windows.rs
crates/ferrosync-core/src/protocol/: compress.rs  constants.rs  handshake.rs  mod.rs  multiplex.rs  varint.rs  wire_format.rs
crates/ferrosync-core/src/server/: auth.rs  config.rs  listener.rs  mod.rs  module.rs  session.rs
crates/ferrosync-core/src/transport/: batch.rs  daemon.rs  local.rs  mod.rs  noise.rs  quic.rs  ssh.rs  ssh_config.rs  tls.rs
crates/ferrosync-core/tests/: daemon.rs  e2e.rs  engine.rs  interop.rs  rsync_compat.rs  rsync_interop.rs  ssh_interop.rs  transfer_engine.rs  wire.rs
crates/ferrosync-core/tests/common/: assertions.rs  env.rs  mod.rs  ssh.rs
crates/ferrosync-core/tests/interop/: auth.rs  native.rs  pull.rs  push.rs  reverse.rs  scenarios.rs
crates/ferrosync-delta/: Cargo.toml
crates/ferrosync-delta/src/: checksum.rs  lib.rs  matcher.rs  sum.rs  token.rs
crates/ferrosync-engine/: Cargo.toml
crates/ferrosync-engine/src/: batch.rs  delete.rs  file_decision.rs  generator.rs  lib.rs  pipeline.rs  progress.rs  receiver.rs  receiver_engine.rs  sender.rs  session.rs  transfer.rs  wire_transfer.rs
crates/ferrosync-filter/: Cargo.toml
crates/ferrosync-filter/src/: lib.rs  pattern.rs  rule.rs
crates/ferrosync-fs/: Cargo.toml
crates/ferrosync-fs/src/: atomic_writer.rs  fake_super.rs  file_data.rs  lib.rs  metadata.rs  unix.rs  windows.rs
crates/ferrosync-protocol/: Cargo.toml
crates/ferrosync-protocol/src/: compress.rs  constants.rs  handshake.rs  multiplex.rs  varint.rs  wire_format.rs
crates/ferrosync-py/: Cargo.toml  pyproject.toml
crates/ferrosync-py/src/: lib.rs
crates/ferrosync-scanner/: Cargo.toml
crates/ferrosync-scanner/src/: lib.rs  scanner.rs  walk.rs
crates/ferrosync-server/: Cargo.toml
crates/ferrosync-server/src/: config.rs  lib.rs  listener.rs  module.rs  session.rs
crates/ferrosync-transport/: Cargo.toml
crates/ferrosync-transport/src/: batch.rs  daemon.rs  lib.rs  noise.rs  quic.rs  ssh.rs  ssh_auth.rs  ssh_config.rs  tls.rs
crates/ferrosync-types/: Cargo.toml
crates/ferrosync-types/src/: constants.rs  entry.rs  lib.rs  mode.rs  options.rs  protocol.rs  stats.rs  types.rs
python/ferrosync/: __init__.py  __init__.pyi
tests/fixtures/ssh/: README  test_key  test_key.pub
tests/python/: test_ferrosync.py
