[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferrosync/ferrosync"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Byte handling
bytes = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Delta algorithm
fast_rsync = "0.2"

# Hashing
md-5 = "0.10"
md4 = "0.10"

# Compression
flate2 = "1"

# SSH transport (native, pure Rust)
russh = "0.57"
ssh2-config = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# Testing
tempfile = "3"
tokio-test = "0.4"

# Internal crates
ferrosync-core = { path = "crates/ferrosync-core" }
