[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0-beta.6"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/coreyleavitt/ferrosync"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Byte handling
bytes = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Delta algorithm
fast_rsync = "0.2"
fastcdc = "3"

# Hashing
md-5 = "0.10"
md4 = "0.10"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Compression
flate2 = "1"
zstd = "0.13"
lz4_flex = "0.13"

# SSH transport (native, pure Rust)
russh = "0.57"
ssh2-config = "0.7"

# TLS transport
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "1.0"
rustls-pki-types = "1"

# Noise protocol
snow = "0.10"

# QUIC transport
quinn = "0.11"
rcgen = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Testing
tempfile = "3"
tokio-test = "0.4"

# Internal crates
ferrosync-core = { path = "crates/ferrosync-core" }

# Patch russh-cryptovec to fix VirtualLock ERROR_WORKING_SET_QUOTA on Windows.
# Grows the working set on demand instead of failing.
# Upstream issue: https://github.com/Eugeny/russh/issues/504
[patch.crates-io]
russh-cryptovec = { git = "https://github.com/coreyleavitt/russh.git", rev = "2641081" }
