[package]
name = "ferrosync-cli"
description = "CLI for ferrosync - rsync wire protocol in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ferrosync"
path = "src/main.rs"

[[bin]]
name = "frsync"
path = "src/main.rs"

[dependencies]
ferrosync-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = "5"
