[package]
name = "ferrosync-core"
description = "Rust implementation of the rsync wire protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fast_rsync = { workspace = true }
md-5 = { workspace = true }
md4 = { workspace = true }
flate2 = { workspace = true }
russh = { workspace = true }
ssh2-config = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
rand_core = { version = "0.6", features = ["std"] }
filetime = "0.2"
