[package]
name = "ferrosync-core"
description = "Rust implementation of the rsync wire protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
ferrosync-filter = { workspace = true }
ferrosync-types = { workspace = true }
tracing = { workspace = true }
fastcdc = { workspace = true }
md-5 = { workspace = true }
md4 = { workspace = true }
blake3 = { workspace = true }
xxhash-rust = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
russh = { workspace = true }
ssh2-config = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }
snow = { workspace = true }
quinn = { workspace = true }
encoding_rs = { workspace = true }

[target.'cfg(unix)'.dependencies]
filetime = "0.2"
xattr = "1"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
rand_core = { version = "0.6", features = ["std"] }
rcgen = { workspace = true }
filetime = "0.2"
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
test-case = "3"
proptest = "1"

[[bench]]
name = "checksums"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "delta"
harness = false
