[package]
name = "ferrosync-core"
description = "Rust implementation of the rsync wire protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrosync-filter = { workspace = true }
ferrosync-fs = { workspace = true }
ferrosync-delta = { workspace = true }
ferrosync-protocol = { workspace = true }
ferrosync-transport = { workspace = true }
ferrosync-types = { workspace = true }
ferrosync-codec = { workspace = true }
ferrosync-scanner = { workspace = true }
ferrosync-engine = { workspace = true }
ferrosync-server = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
rand_core = { version = "0.6", features = ["std"] }
rcgen = { workspace = true }
filetime = "0.2"
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
test-case = "3"
proptest = "1"

[[bench]]
name = "checksums"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "delta"
harness = false
