[package]
name = "ferrosync-protocol"
description = "rsync wire protocol: MUX framing, varint encoding, handshake, compression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrosync-types = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1"
