[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferrosync"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Python bindings for ferrosync - rsync wire protocol in Rust"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
module-name = "ferrosync._ferrosync"
python-source = "../../python"
features = ["pyo3/extension-module"]
