[package]
name = "ferrosync-transport"
description = "Transport layer for ferrosync: SSH, daemon, TLS, QUIC, Noise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrosync-types = { workspace = true }
ferrosync-protocol = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
russh = { workspace = true }
ssh2-config = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }
snow = { workspace = true }
quinn = { workspace = true }
encoding_rs = { workspace = true }
md-5 = { workspace = true }
md4 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
rand_core = { version = "0.6", features = ["std"] }
rcgen = { workspace = true }
tempfile = { workspace = true }
